debathena-dotfiles (10.0.19-0debathena3) unstable; urgency=low

  * Don't ship /var/run/athena-sessions as part of the package.

 -- Evan Broder <broder@mit.edu>  Thu, 10 Dec 2009 20:42:52 -0500

debathena-dotfiles (10.0.19-0debathena2) unstable; urgency=low

  * Punt debathena-bash and debathena-tcsh recommendations.

 -- Evan Broder <broder@mit.edu>  Sun, 15 Nov 2009 15:30:37 -0500

debathena-dotfiles (10.0.19-0debathena1) unstable; urgency=low

  * Fix the test of from's availability.

 -- Robert Basch <rbasch@mit.edu>  Mon, 19 Oct 2009 11:54:06 -0400

debathena-dotfiles (10.0.18-0debathena1) unstable; urgency=low

  * Stop defining add and renew in the Athena dotfiles - they should be
    getting defined in the system dotfiles anyway. (Trac: #393)

 -- Evan Broder <broder@mit.edu>  Sat, 17 Oct 2009 12:28:42 -0400

debathena-dotfiles (10.0.17-0debathena1) unstable; urgency=low

  * If we're not running from, don't run mailquota either - they're both
    provided by mitmailutils.

 -- Evan Broder <broder@mit.edu>  Sat, 17 Oct 2009 03:50:39 -0400

debathena-dotfiles (10.0.16-0debathena1) unstable; urgency=low

  * Only run from at login if it's available, and demote it to a
    recommendation.

 -- Evan Broder <broder@mit.edu>  Fri, 16 Oct 2009 17:00:16 -0400

debathena-dotfiles (10.0.15-0debathena1) unstable; urgency=low

  * Stop setting umask in dotfiles. (Trac: #368)

 -- Nancy R Ouyang <nouyang@mit.edu>  Sun, 20 Sep 2009 15:45:25 -0400

debathena-dotfiles (10.0.14-0debathena1) unstable; urgency=low

  * Desupport extend, sextend, textend, ~/.path, cdpath, and setting the
    prompt in tcsh. (Trac: #256)

 -- Evan Broder <broder@mit.edu>  Thu, 11 Jun 2009 21:48:46 -0400

debathena-dotfiles (10.0.13-0debathena1) unstable; urgency=low

  * Also don't run 'mailquota' on EXCHANGE.MIT.EDU accounts for now
    (although as of mitmailutils >= 10.1.0-0debathena3, this is only
    a cosmetic problem).
