@@ -13,8 +13,9 @@ DEB_DESTDIR = $(CURDIR)/debian/tmp/
 DEB_DH_INSTALL_SOURCEDIR = $(DEB_DESTDIR)
 DEB_UPDATE_RCD_PARAMS = "start 65 S ."
 
-common-install::
-	chmod a=rwx,o+t $(DEB_DESTDIR)/var/run/athena-sessions
+common-build-indep::
+	mkdir -p $(DEB_DESTDIR)/usr/share/lintian/overrides
+	cp $(CURDIR)/debian/lintian/debathena-dotfiles $(DEB_DESTDIR)/usr/share/lintian/overrides/
 
 clean::
 	rm -f gnome/athena.schemas
